# swingbench

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  euler_lagrange_derivation.md
cmake/: patch_sfml_highdpi.cmake
include/: pendulum.hpp  renderer.hpp
math/: build.sh  euler_lagrange_derivation_2_arms.tex  euler_lagrange_derivation_3_arms.tex  euler_lagrange_generalisation.tex
src/: main.cpp  pendulum.cpp  renderer.cpp
